# monge-fleet

./: .gitignore  README.md  demo.py  pyproject.toml
docs/: MONGE-PROJECTION.md  SYNTHESIS.md
papers/: THE-PROJECTION.md  TROPICAL-MONGE.md  ZERO-DRIFT-PROOF.md  monge-projections.md
proofs/: byzantine.py  convergence.py  zero_holonomy.py
src/monge_fleet/: __init__.py  cohomology.py  consensus.py  geometry.py  homothetic.py  pythagorean48.py  radical_axis.py
src/monge_fleet/bridge/: __init__.py  monge_ct.py
src/monge_fleet/pythagorean48/: __init__.py  collinearity.py  directions.py  drift_analysis.py
src/monge_fleet/transport/: __init__.py  consensus_transport.py  entropy.py  fleet.py  geometry.py  monge_map.py  wasserstein.py
tests/: test_monge.py
