[project]
name = "monge-fleet"
version = "0.1.0"
description = "Monge's theorem for fleet mathematics — projective invariants for coupled systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Casey Digennaro", email = "cocapn@proton.me"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["monge", "fleet-math", "constraint-theory", "consensus", "optimal-transport"]

dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/", "papers/", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
